--- a/index.html
+++ b/index.html
@@ -2,24 +2,41 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Quiz</title>
-    <link rel="stylesheet" href="assets/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Code Quiz</title>
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
 
-    <div class="container">
-        <h1 class="welcome">Welcome to Code Quiz</h1>
-        <h2 id="countdown">
-          </h1>
-          <h3 id="main">
-        </h2>
-      </div>
-    
-    <script src="assets/questions.js"></script>
-    <script src="assets/script.js"></script>
+  <div class="container">
+    <h1 class="welcome">Welcome to Code Quiz</h1>
+    <h2 id="countdown">
+      </h1>
+      <h3 id="main">
+    </h2>
+  </div>
+
+  <h1 id="question" data-question=""></h1>
+  <ul>
+    <li>
+      <button id="button-a" data-answer="a">A: </button>
+      <span id="answer-a"></span></li>
+    <li>
+      <button id="button-b" data-answer="b">B: </button>
+      <span id="answer-b"></span></li>
+    <li>
+      <button id="button-c" data-answer="c">C: </button>
+      <span id="answer-c"></span></li>
+    <li>
+      <button id="button-d" data-answer="d">D: </button>
+      <span id="answer-d"></span></li>
+  </ul>
+  <p id="score"></p>
+
+  <script src="assets/questions.js"></script>
+  <script src="assets/script.js"></script>
 </body>
 
 </html>
