--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
 </head>
 
 <body>
-  <header>
-    <h1 class="welcome">Welcome to Code Quiz</h1>
-  </header>
+
   <div class="container">
+    <h1 class="welcome">Welcome to Code Quiz</h1>
+   
     <div class="timer">
+      
       <div class="controls">
+
         <div class="time">
           <div id="minutes">1</div>
           <div id="seconds">00</div>
         </div>
 
-        <div class="button">
+        <div class="buttons">
           <button aria-label="play" id="play">
-            <i class="fa fa-play" aria-hidden="true"></i>
+            
           </button>
           <h1>START</h1>
         </div>
@@ -31,9 +33,10 @@
     </div>
     <div class="inputs">
       <div class="input-group">
-        <label for="quiz-minutes">Minute of Quiz</label>
-        <input type="number" name="quiz" id="quiz-minutes" value="1" />
+        <label for="quiz-minutes">Minutes of Quiz</label>
+        <input type="number" name="work" id="quiz-minutes" value="1" />
       </div>
+
     </div>
 
 
