--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
   <div class="container">
     <h1 class="welcome">Welcome to Code Quiz</h1>
-   
+
     <div class="timer">
-      
+
       <div class="controls">
 
         <div class="time">
@@ -25,7 +25,7 @@
 
         <div class="buttons">
           <button aria-label="play" id="play">
-            
+
           </button>
           <h1>START</h1>
         </div>
@@ -39,26 +39,31 @@
 
     </div>
 
+    <div id="question-section">
+      <h1 id="question" data-question=""></h1>
+      <ul>
+        <li>
+          <button id="button-a" data-answer="a">A </button>
+          <span id="answer-a"></span></li>
+        <li>
+          <button id="button-b" data-answer="b">B </button>
+          <span id="answer-b"></span></li>
+        <li>
+          <button id="button-c" data-answer="c">C </button>
+          <span id="answer-c"></span></li>
+        <li>
+          <button id="button-d" data-answer="d">D </button>
+          <span id="answer-d"></span></li>
+      </ul>
+      <p id="score"></p>
+    </div>
 
-    <h1 id="question" data-question=""></h1>
-    <ul>
-      <li>
-        <button id="button-a" data-answer="a">A </button>
-        <span id="answer-a"></span></li>
-      <li>
-        <button id="button-b" data-answer="b">B </button>
-        <span id="answer-b"></span></li>
-      <li>
-        <button id="button-c" data-answer="c">C </button>
-        <span id="answer-c"></span></li>
-      <li>
-        <button id="button-d" data-answer="d">D </button>
-        <span id="answer-d"></span></li>
-    </ul>
-    <p id="score"></p>
-
+    <div id="results">
+      <h1>Results</h1>
+      <h1>Correct: <span id="correct-answers"></span> incorrect: <span id="wrong-answers"></span></h1>
+      <button id="scores">Save scores</button>
+    </div>
   </div>
-
 
   <script src="assets/questions.js"></script>
   <script src="assets/script.js"></script>
